css/custom.css
#sidebar, .hero-unit {
	margin-top: 60px;
}
h1 {
	line-height: 1.1em;
}
h2 {
	font-size: 1.7em;
}
h3 {
	font-size: 1.4em;
}
h4 {
	font-size: 1.2em;
}
img {
	margin-bottom: 1em;
}
pre {
	padding: 1em !important;
}

/* Hidden subtitle anchor fix; issue caused by navbar-fixed-top */
:not(li)>h2, h3, h4 {
	padding-top: 52px; 
	margin-top: -52px;
}
dd+h4 {
	padding-top: 50px;
}
/* / hidden subtitle anchor fix */

/* Fixes for search results */
#___gcse_0 * {
	font-family: "Open Sans",Calibri,Candara,Arial,sans-serif;
}
.gs-bidi-start-align.gs-snippet {
	padding-left: 8px;
}


/* / Fixes for search box */

/* responsive stylesheet fix */
.navbar-search {
	border: 0 !important;
}

/* Sticky footer styles from http://twitter.github.com/bootstrap/examples/sticky-footer-navbar.html */
html, body {
	height: 100%;
	color: #444444;
}
#wrap {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -60px;
}
#push {
	height: 60px;
}
footer {
	background-color: #f5f5f5;
	box-sizing: border-box; 
	padding: 10px;
	border-top: 1px solid #ccc;
	margin-top: 2em;
	height: auto;
}
@media (max-width: 767px) {
	footer {
		margin-left: -20px;
		margin-right: -20px;
		padding-left: 20px;
		padding-right: 20px;
	}
}
@media (min-width: 980px) {
	#wrap > .container-fluid {
		padding-top: 60px;
	}
}

/* /sticky footer */

